<resources>
    <string name="app_name">BankVerficationCenter</string>
    <string name="login">LOGIN</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="submit">LOG IN</string>
    <string name="sign_in">SIGN UP</string>
    <string name="forgot_password">FORGOT PASSWORD ?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="firstname">FIRSTNAME</string>
    <string name="lastname">LASTNAME</string>
    <string name="email">EMAIL</string>
    <string name="pass">PASSWORD</string>
    <string name="gender">GENDER</string>
    <string name="contactnum">CONTACTNUM</string>
    <string name="female">FEMALE</string>
    <string name="male">MALE</string>
    <string name="sub">SUBMIT</string>
    <string name="forgot">FORGOT PASSWORD ?</string>
    <string name="emailid">EMAIL</string>
    <string name="old_pass">CURRENT PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="confirm_password">NEW PASSWORD , AGAIN</string>
    <string name="change">CHANGE PASSWORD</string>
    <string name="fem">Female</string>
    <string name="male1">Male</string>
    <string name="mob">CONTACT NO</string>
    <string name="add">ADDRESS</string>
    <string name="state">STATE</string>
    <string name="submit1">SUBMIT</string>
    <string name="title_activity_navigation">BANK VERIFICATION CENTER</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="text1">->In India, getting a loan is a very tiring and complicated process as it may take weeks even months for loan approval and people need to visit the loan office repeatedly for document and verification.
	</string>
    <string name="text2">->This system is designed to automate the loan process from both, bankers as well as customer’s side. Here customers get information about various bank/loans provided along with rate of interest and required documents.
</string>
    <string name="text3">->The server administrator now can check it and decide whether to approve or reject the candidate. If he decides to approve, the banker may select to send customer to next stage.
</string>
    <string-array name="clientlist"><item>Client1
    </item>
        <item>Client2</item>
        <item>Client3</item>
    </string-array>
    <string-array name="infolist">
        <item>Not Available</item>
        <item>Available</item>
        <item>Postpone</item>

    </string-array>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string-array name="areademo">
        <item>area</item>
        <item>bapunagar</item>
        <item>memnagar</item>
        <item>navrangpura</item>
        <item>krishnanagar</item>
    </string-array>
    <string-array name="notavailable">
        <item>All Ok</item>
        <item>Address mismatch</item>
        <item>Address not available</item>
        <item>Customer denied connection</item>
        <item>Customer not met</item>
        <item>Documents not available</item>
        <item>House lock/Office lock</item>
        <item>Negative Area</item>
        <item>No such customer available</item>
    </string-array>
    <string-array name="status">
        <item>Positive</item>
        <item>Negative</item>
        <item>Hold</item>
        <item>Revert to Sales</item>
        <item>Problematic</item>

    </string-array>

</resources>
