<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_client_sign"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.abc.bankverficationcenter.ClientSign"
    android:orientation="vertical"
    android:weightSum="18"
    android:background="@drawable/bg"
    android:gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CLIENT REGISTRATION"
        android:textAlignment="center"
        android:layout_weight="2"
        android:textSize="25dp"
        android:id="@+id/creg"
        android:textColor="#fffefe"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstname"
        android:layout_weight="1"
        android:textColor="#fffefe"
        android:textSize="18dp"
        android:id="@+id/Ftxt"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textColorHint="#6eb8dbdf"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname"
        android:textColorHint="#6eb8dbdf"
        android:layout_weight="1"
        android:textColor="#fffefe"
        android:textSize="18dp"
        android:id="@+id/Ltxt"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="#6eb8dbdf"
        android:layout_weight="1"
        android:textColor="#fffefe"
        android:textSize="18dp"
        android:id="@+id/emailtxt"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:textColorHint="#6eb8dbdf"
        android:layout_weight="1"
        android:textColor="#fffefe"
        android:textSize="18dp"
        android:id="@+id/Ptxt"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gender"
        android:layout_weight="1"
        android:textColor="#fffefe"
        android:textColorHint="#6eb8dbdf"
        android:textSize="18dp"
        android:id="@+id/Gendertxt"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/male"
            android:textColorHint="#6eb8dbdf"
            android:layout_weight="4"
            android:textColor="#fffefe"
            android:textSize="15dp"
            android:id="@+id/Mtxt"
            android:layout_marginLeft="30dp"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/female"
            android:textColorHint="#6eb8dbdf"
            android:layout_weight="4"
            android:textColor="#fffefe"
            android:textSize="15dp"
            android:id="@+id/Femaletxt"
            android:layout_marginRight="30dp"/>
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contactnum"
        android:textColorHint="#6eb8dbdf"
        android:layout_weight="1"
        android:textColor="#fffefe"
        android:textSize="18dp"
        android:id="@+id/Contacttxt"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sub"
        android:fontFamily="serif"
        android:textSize="18dp"
        android:textColor="#fffefe"
        android:background="#da117397"
        android:id="@+id/sub1btn"
        android:layout_marginTop="30dp"
        />


</LinearLayout>
