<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.abc.bankverficationcenter.MainActivity"
    android:orientation="vertical"
    android:weightSum="15"
    android:background="@drawable/bg"
    android:gravity="center_vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/login"
        android:gravity="center"
        android:id="@+id/logtxt"
        android:textColor="#fffefe"
        android:textSize="40dp"
        android:paddingBottom="30dp"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="4"
        android:gravity="center_vertical"
        android:layout_marginTop="80dp"
        >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:drawableLeft="@drawable/ic_group_black_24dp"
        android:drawablePadding="10dp"
        android:layout_weight="3"
        android:textColor="#fffefe"
        android:textSize="18dp"
        android:id="@+id/usertxt"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_weight="3"
        android:textColor="#fffefe"
        android:textSize="18dp"
        android:id="@+id/passtxt"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="20dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit"
        android:fontFamily="serif"
        android:textSize="20dp"
        android:textColor="#fffefe"
        android:background="@android:color/transparent"
        android:id="@+id/subbtn"
        android:paddingTop="40dp"
        android:layout_weight="3"
        /></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8"
        android:layout_gravity="bottom"
        android:paddingTop="150dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:fontFamily="serif"
            android:textSize="15dp"
            android:textColor="#fffefe"
            android:layout_weight="4"
            android:id="@+id/signup"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:fontFamily="serif"
            android:textSize="15dp"
            android:layout_weight="4"
            android:textAlignment="center"
            android:textColor="#fffefe"
            android:id="@+id/forgot"
            />

    </LinearLayout>
    </LinearLayout>



