<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.abc.bankverficationcenter.AboutUs"
    android:orientation="vertical"
    android:background="@drawable/b3"
    android:weightSum="4"
    android:alpha="0.6"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ABOUT US"
        android:textSize="22dp"
        android:textColor="#0b0b0b"
        android:gravity="center"
        android:layout_weight="1"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:textSize="17dp"
        android:textColor="#0b0b0b"
        android:layout_weight="1"
        android:scrollbarAlwaysDrawVerticalTrack="true"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:textSize="17dp"
        android:textColor="#262626"
        android:layout_weight="1"
        android:scrollbarAlwaysDrawVerticalTrack="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text3"
        android:textSize="17dp"
        android:textColor="#0b0b0b"
        android:layout_weight="1"
        android:scrollbarAlwaysDrawVerticalTrack="true"/>


</LinearLayout>
