<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_manage_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.abc.bankverficationcenter.ManageProfile"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:weightSum="5">
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Manage Profile"
    android:gravity="center"
    android:textSize="25dp"
    android:layout_weight="1"
     android:textColor="#fffefe"
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstname"
        android:layout_weight="0.3"
        android:textColor="#fffefe"
        android:textSize="18dp"
        android:id="@+id/Firsttxt"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textColorHint="#6eb8dbdf"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname"
        android:textColorHint="#6eb8dbdf"
        android:layout_weight="0.3"
        android:textColor="#fffefe"
        android:textSize="18dp"
        android:id="@+id/Lasttxt"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="#6eb8dbdf"
        android:layout_weight="0.3"
        android:textColor="#fffefe"
        android:textSize="18dp"
        android:id="@+id/mailtxt"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Contact Number"
        android:textColorHint="#6eb8dbdf"
        android:layout_weight="0.3"
        android:textColor="#fffefe"
        android:textSize="18dp"
        android:id="@+id/contacttxt"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sub"
        android:fontFamily="serif"
        android:textSize="18dp"
        android:textColor="#fffefe"
        android:background="#da117397"
        android:id="@+id/sub1btn"
        android:layout_marginTop="30dp"
        />


</LinearLayout>
