<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.abc.bankverficationcenter.ChangePassword"
    android:orientation="vertical"
    android:weightSum="18"
    android:background="@drawable/bg"
    android:gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CHANGE PASSWORD"
        android:textAlignment="center"
        android:layout_weight="2"
        android:textSize="25dp"
        android:id="@+id/creg"
        android:textColor="#fffefe"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/old_pass"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="10dp"
        android:textColorHint="#6eb8dbdf"
        android:layout_weight="1"
        android:textColor="#fffefe"
        android:textSize="18dp"
        android:id="@+id/otxt"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:textColorHint="#6eb8dbdf"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:layout_weight="1"
        android:drawablePadding="10dp"
        android:textColor="#fffefe"
        android:textSize="18dp"
        android:id="@+id/Ntxt"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:textColorHint="#6eb8dbdf"
        android:drawablePadding="10dp"
        android:layout_weight="1"
        android:textColor="#fffefe"
        android:textSize="18dp"
        android:id="@+id/Confirmtxt"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/change"
        android:fontFamily="serif"
        android:textSize="18dp"
        android:textColor="#fffefe"
        android:background="#da117397"
        android:id="@+id/changebtn"
        android:layout_marginTop="30dp"
        />

</LinearLayout>
